[package]
name = "tt-proof-planner"
version = "0.1.0"
edition = "2021"

[dependencies]

# local dependencies
tt-core = { path = "../tt-core" }
arithmetic = { package = "tt-arithmetic", path = "../tt-arithmetic" }
tpch-data = { package = "tt-tpch-data", path = "../tt-tpch-data" }

# arkworks dependencies
ark-ff = { workspace = true }
ark-piop = { workspace = true }
ark-serialize = { workspace = true }

# datafusion dependencies
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-functions-aggregate = { workspace = true }

# other dependencies
tokio = { workspace = true }
indexmap = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
[dev-dependencies]
ark-test-curves = { workspace = true }
datafusion-functions-aggregate = { workspace = true }
