[package]
name = "tt-tpch-data"
version = "0.1.0"
edition = "2024"

[dependencies]
arithmetic = { package = "tt-arithmetic", path = "../tt-arithmetic" }
tpchgen = { workspace = true }
tpchgen-arrow = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
duckdb = { workspace = true }
datafusion = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
chrono = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
