[package]
name = "zksql-macros"
version = "0.1.0"
edition = "2024"


[lib]
proc-macro = true


[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
# proc-macro2 = "1.0"


# [[test]]
# name = "tests"
# path = "tests"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }


[features]
test = ["syn/extra-traits"]
