[package]
name = "tt-arithmetic"
description = "Arithmetization primitives — encoding and decoding tables, columns, and schemas into algebraic objects for the truth-table proof system."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = ["std", "parallel"]
std = []
parallel = [
    "ark-ff/parallel",
    "ark-serialize/parallel",
    "ark-piop/parallel",
]

[dependencies]
# arkworks dependencies
ark-ff = { workspace = true }
ark-piop = { workspace = true }
ark-serialize = { workspace = true }
# datafusion dependencies
datafusion = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-common = { workspace = true }

# other dependencies
thiserror = { workspace = true }
derivative = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
ark-test-curves = { workspace = true }
